# cmd/api/handlers/contract.go
@@ -65,6 +65,36 @@ func (ctx *Context) GetRandomContract(c *gin.Context) {
 	c.JSON(http.StatusOK, res)
 }
 
+// GetContractStats godoc
+// @Summary Show contract stats
+// @Description Show total volume, unique users and transactions count for period
+// @Tags contract
+// @ID get-contract-stats
+// @Param network path string true "Network"
+// @Param address path string true "KT address" minlength(36) maxlength(36)
+// @Param period query string true "One of periods"  Enums(year, month, week, day)
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} elastic.DAppStats
+// @Failure 500 {object} Error
+// @Router /contract/{network}/{address} [get]
+func (ctx *Context) GetContractStats(c *gin.Context) {
+	var req getContractRequest
+	if err := c.BindUri(&req); handleError(c, err, http.StatusBadRequest) {
+		return
+	}
+	var reqPeriod periodRequest
+	if err := c.BindQuery(&reqPeriod); handleError(c, err, http.StatusBadRequest) {
+		return
+	}
+	stats, err := ctx.ES.GetDAppStats(req.Network, req.Address, reqPeriod.Period)
+	if handleError(c, err, 0) {
+		return
+	}
+
+	c.JSON(http.StatusOK, stats)
+}
+
 func (ctx *Context) contractPostprocessing(contract models.Contract, c *gin.Context) (Contract, error) {
 	var res Contract
 	res.FromModel(contract)
